<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    tools:context="com.example.android.projectfour_musicalstructureapp.MainActivity">

    <EditText
        android:id="@+id/quick_search"
        style="@style/quick_search"
        android:drawableStart="@drawable/ic_music_note_white_24dp"
        android:hint="@string/quick_search" />

    <TextView
        android:id="@+id/main_hint"
        style="@style/hint_text_view"
        android:layout_below="@+id/quick_search"
        android:background="@drawable/rounded_text_view"
        android:text="@string/main_screen" />

    <LinearLayout
        android:id="@+id/main_menu"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottom_player"
        android:layout_below="@id/main_hint"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/now_playing_layout"
                style="@style/menu_button"
                android:orientation="vertical">
                <!--Now playing-->
                <ImageButton
                    style="@style/menu_icon"
                    android:layout_weight="1"
                    android:src="@drawable/ic_play_circle_outline_white_48dp" />

                <TextView
                    style="@style/menu_text"
                    android:text="@string/menu_now_playing" />
            </LinearLayout>

            <TextView style="@style/divider_horizontal" />

            <LinearLayout
                android:id="@+id/playlist_layout"
                style="@style/menu_button"
                android:orientation="vertical">
                <!--Playlist-->
                <ImageButton
                    style="@style/menu_icon"
                    android:layout_weight="1"
                    android:src="@drawable/ic_playlist_play_white_48dp" />

                <TextView
                    style="@style/menu_text"
                    android:text="@string/menu_playlist" />
            </LinearLayout>

        </LinearLayout>

        <View style="@style/divider_vertical" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/stream_layout"
                style="@style/menu_button"
                android:orientation="vertical">
                <!--Stream -->
                <ImageButton
                    style="@style/menu_icon"
                    android:layout_weight="1"
                    android:src="@drawable/ic_cast_connected_white_48dp" />

                <TextView
                    style="@style/menu_text"
                    android:layout_weight="1"

                    android:text="@string/menu_stream" />
            </LinearLayout>

            <TextView style="@style/divider_horizontal" />
            <!--Favorite songs-->
            <LinearLayout
                android:id="@+id/favorite_songs_layout"
                style="@style/menu_button"
                android:orientation="vertical">

                <ImageButton
                    style="@style/menu_icon"
                    android:layout_weight="1"
                    android:src="@drawable/ic_tag_faces_white_48dp" />

                <TextView
                    style="@style/menu_text"
                    android:text="@string/menu_favorite" />
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <!--Bottom player-->

    <LinearLayout
        android:id="@+id/bottom_player"
        style="@style/player_bottom"
        android:layout_width="match_parent"
        android:layout_alignParentBottom="true"
        android:orientation="horizontal">

        <ImageView
            style="@style/player_image"
            android:contentDescription="@string/album_image"
            android:src="@drawable/group80_image3" />

        <TextView
            android:id="@+id/bottom_player_text"
            style="@style/player_bottom_text"
            android:text="@string/first_group" />

        <ImageView
            style="@style/player_bottom_icons"
            android:contentDescription="@string/play_pause_button"

            android:src="@drawable/ic_play_arrow_white_24dp" />

        <ImageView
            style="@style/player_bottom_icons"
            android:contentDescription="@string/next_song_button"
            android:src="@drawable/ic_skip_next_white_24dp" />

        <ImageView
            style="@style/player_bottom_icons"
            android:contentDescription="@string/favorite_button"
            android:src="@drawable/ic_tag_faces_white_24dp" />
    </LinearLayout>


</RelativeLayout>
