<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.example.android.projectfour_musicalstructureapp.Stream">

    <LinearLayout
        android:id="@+id/dragView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/hint_text_view"
            android:background="@drawable/rounded_text_view"
            android:text="@string/stream_layout" />

        <LinearLayout
            android:id="@+id/player"
            style="@style/player">

            <ImageView
                style="@style/stream_image"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_radio_white_48dp" />
            <TextView
                style="@style/stream_text"
                android:text="@string/stream_name"/>

            <ImageView
                style="@style/stream_buttons"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_play_arrow_white_48dp" />
            <ImageView
                style="@style/stream_buttons"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_clear_white_48dp" />
        </LinearLayout>
        <LinearLayout
            style="@style/layoutForArray">
        <TextView
            style="@style/stream_list_header"
            android:text="@string/stream_list"/>
        <ListView
            android:id="@+id/list"
            style="@style/stream_list_view">

        </ListView>
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>