<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/player_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    tools:context="com.example.android.projectfour_musicalstructureapp.SongActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            style="@style/hint_text_view"
            android:background="@drawable/rounded_text_view"
            android:text="@string/big_player_layout" />

        <ImageView
            style="@style/now_playing_image"
            android:contentDescription="@string/album_image"
            android:src="@drawable/group80_image3" />
        <TextView
            style="@style/player_big_text"
            android:id="@+id/bottom_player_text"
            android:text="@string/first_group" />

        <SeekBar style="@style/soupatko" />

        <LinearLayout
            android:id="@+id/player"
            style="@style/player">

            <ImageView
                style="@style/player_buttons_small"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_shuffle_white_24dp" />

            <ImageView
                style="@style/player_buttons_big"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_skip_previous_white_48dp" />

            <ImageView
                style="@style/player_buttons_big_play"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_play_arrow_white_48dp" />

            <ImageView
                style="@style/player_buttons_big"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_skip_next_white_48dp" />
            <ImageView
                style="@style/player_buttons_small"
                android:contentDescription="@string/player_buttons"
                android:layout_weight="1"
                android:src="@drawable/ic_repeat_white_24dp" />


        </LinearLayout>


    </LinearLayout>
</RelativeLayout>