<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/playlist_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_gradient"
    android:orientation="vertical"
    tools:context="com.example.android.projectfour_musicalstructureapp.PlaylistActivity">

    <TextView
        android:background="@drawable/rounded_text_view"
        style="@style/hint_text_view"
        android:text="@string/playlist_layout"/>
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <TextView
            style="@style/group_header"
            android:text="@string/first_group"
            android:drawableStart="@drawable/ic_keyboard_arrow_left_white_24dp"
            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp" />

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/group_1"
                style="@style/group_image_style"
                android:contentDescription="@string/album_image"
                android:src="@drawable/group80_image1" />

            <ImageView
                android:id="@+id/group_2"
                style="@style/group_image_style"
                android:contentDescription="@string/album_image"
                android:src="@drawable/group80_image2" />

            <ImageView
                android:id="@+id/group_3"
                style="@style/group_image_style"
                android:contentDescription="@string/album_image"
                android:src="@drawable/group80_image3" />

            <ImageView
                android:id="@+id/group_4"
                style="@style/group_image_style"
                android:contentDescription="@string/album_image"
                android:src="@drawable/group80_image4" />

        </LinearLayout>
        </HorizontalScrollView>


                <TextView
                    style="@style/group_header"
                    android:text="@string/second_group"
                    android:drawableStart="@drawable/ic_keyboard_arrow_left_white_24dp"
                    android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"/>

                <HorizontalScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/group_5"
                            style="@style/group_image_style"
                            android:contentDescription="@string/album_image"
                            android:src="@drawable/group90_image1" />

                        <ImageView
                            android:id="@+id/group_6"
                            style="@style/group_image_style"
                            android:contentDescription="@string/album_image"
                            android:src="@drawable/group90_image2" />

                        <ImageView
                            android:id="@+id/group_7"
                            style="@style/group_image_style"
                            android:contentDescription="@string/album_image"
                            android:src="@drawable/group90_image3" />

                        <ImageView
                            android:id="@+id/group_8"
                            style="@style/group_image_style"
                            android:contentDescription="@string/album_image"
                            android:src="@drawable/group90_image4" />

                    </LinearLayout>
                </HorizontalScrollView>



                        <TextView
                            style="@style/group_header"
                            android:text="@string/third_group"
                            android:drawableStart="@drawable/ic_keyboard_arrow_left_white_24dp"
                            android:drawableEnd="@drawable/ic_keyboard_arrow_right_white_24dp"/>

                        <HorizontalScrollView
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:orientation="horizontal">

                                <ImageView
                                    android:id="@+id/group_9"
                                    style="@style/group_image_style"
                                    android:contentDescription="@string/album_image"
                                    android:src="@drawable/group_chill_image1" />

                                <ImageView
                                    android:id="@+id/group_10"
                                    style="@style/group_image_style"
                                    android:contentDescription="@string/album_image"
                                    android:src="@drawable/group_chill_image2" />

                                <ImageView
                                    android:id="@+id/group_11"
                                    style="@style/group_image_style"
                                    android:contentDescription="@string/album_image"
                                    android:src="@drawable/group_chill_image3" />

                            </LinearLayout>
                        </HorizontalScrollView>
                        <TextView
                            style="@style/group_header"
                            android:text="@string/four_group"
                            android:drawableStart="@drawable/ic_library_add_white_18dp"/>


    </LinearLayout>
    </ScrollView>

</LinearLayout>
